Se agregan servicios para obtener proyecto curricular y nombre del docente que realiza la solicitud para el pago
